usr/css/custom.css
/* TITLE SLIDE */

.title-slide { /* dims of (1920 x 1279) AND (2206 x 2557) */
    background-image: url('../../../assets/img/theme/logo.png'), url(../../../assets/img/theme/title.jpg);
    background-size: 20%, cover;
    background-position: 1em 90%, top;
    padding: 1em;
}

/* title */

.title-slide h1.title {
    margin: 0;
}

/* author */

.title-slide .author {
    text-align: right;
    position: absolute;
    right: calc((20/35)*1em);
    bottom: 0;
    margin-bottom: 1em;
}

/* no number */

.title-slide .remark-slide-number, .nonumber .remark-slide-number {
    display: none;
}

/* topic icon  */

img.topic {
    position: absolute;
    right: 1em;
    top: 1em;
    width: 20%;
}

/* series footer */

p.my-footer {
    display: block;
    background-color: #000;
    position: absolute;
    bottom: 0px;
    left: 0px;
    height: 1.1em;
    width: 12em;
    padding: 0;
    margin: 0;
    z-index: 1;
}

p.my-footer span {
    font-size: 10pt;
    color: #fff;
    position: absolute;
    left: 20px;
    bottom: 2px;
    z-index: 1;
}

/* RESOURCES SLIDE */

#slide-resources {
  padding-top: 0;
  padding-bottom: 0;
}


/* no-classes */

.nomargin {
  margin: 0!important;
}
.nofontsize p {
  font-size: 0;
}
.nooverflow {
  margin-bottom: 5px;
}
.nomargin-ul ul {
  margin: 0;
}
.nomargin-h1 h1, .nomargin-h2 h2, .nomargin-h3 h3, .nomargin-h4 h4 {
  margin: 0;
}
.nopadding-h1 h1, .nopadding-h2 h2, .nopadding-h3 h3, .nopadding-h4 h4 {
  padding: 0;
}

/* remark styling */
.remark-slide-scaler {
  overflow: auto;
}


/* vertical content class alignment */

.vbottom-0  { position: relative; bottom: -100%; transform: translateY(-100%);}
.vbottom-5  { position: relative; bottom: -95%; transform: translateY(-100%);}
.vbottom-10 { position: relative; bottom: -90%; transform: translateY(-100%);}
.vbottom-15 { position: relative; bottom: -85%; transform: translateY(-100%);}
.vbottom-20 { position: relative; bottom: -80%; transform: translateY(-100%);}
.vbottom-25 { position: relative; bottom: -75%; transform: translateY(-100%);}
.vbottom-30 { position: relative; bottom: -70%; transform: translateY(-100%);}
.vbottom-35 { position: relative; bottom: -65%; transform: translateY(-100%);}
.vbottom-40 { position: relative; bottom: -60%; transform: translateY(-100%);}
.vbottom-45 { position: relative; bottom: -55%; transform: translateY(-100%);}

.vtop-0  { position: relative; top: 0%;}
.vtop-5  { position: relative; top: 5%;}
.vtop-10 { position: relative; top: 10%;}
.vtop-15 { position: relative; top: 15%;}
.vtop-20 { position: relative; top: 20%;}
.vtop-25 { position: relative; top: 25%;}
.vtop-30 { position: relative; top: 30%;}
.vtop-35 { position: relative; top: 35%;}
.vtop-40 { position: relative; top: 40%;}
.vtop-45 { position: relative; top: 45%;}

.remark-slide-content .vmiddle h2, .remark-slide-content .vmiddle h3, .remark-slide-content .vmiddle h4, .remark-slide-content .vmiddle h5, .remark-slide-content .vmiddle h6 {margin-top: 0;}
.remark-slide-content .vbottom-0 h1, .remark-slide-content .vbottom-0 h2, .remark-slide-content .vbottom-0 h3, .remark-slide-content .vbottom-0 h4, .remark-slide-content .vbottom-0 h5, .remark-slide-content .vbottom-0 h6 {margin-top: 0;}
.remark-slide-content .vbottom-5 h1, .remark-slide-content .vbottom-5 h2, .remark-slide-content .vbottom-5 h3, .remark-slide-content .vbottom-5 h4, .remark-slide-content .vbottom-5 h5, .remark-slide-content .vbottom-5 h6 {margin-top: 0;}
.remark-slide-content .vbottom-10 h1, .remark-slide-content .vbottom-10 h2, .remark-slide-content .vbottom-10 h3, .remark-slide-content .vbottom-10 h4, .remark-slide-content .vbottom-10 h5, .remark-slide-content .vbottom-10 h6 {margin-top: 0;}
.remark-slide-content .vbottom-15 h1, .remark-slide-content .vbottom-15 h2, .remark-slide-content .vbottom-15 h3, .remark-slide-content .vbottom-15 h4, .remark-slide-content .vbottom-15 h5, .remark-slide-content .vbottom-15 h6 {margin-top: 0;}
.remark-slide-content .vbottom-20 h1, .remark-slide-content .vbottom-20 h2, .remark-slide-content .vbottom-20 h3, .remark-slide-content .vbottom-20 h4, .remark-slide-content .vbottom-20 h5, .remark-slide-content .vbottom-20 h6 {margin-top: 0;}
.remark-slide-content .vbottom-25 h1, .remark-slide-content .vbottom-25 h2, .remark-slide-content .vbottom-25 h3, .remark-slide-content .vbottom-25 h4, .remark-slide-content .vbottom-25 h5, .remark-slide-content .vbottom-25 h6 {margin-top: 0;}
.remark-slide-content .vbottom-30 h1, .remark-slide-content .vbottom-30 h2, .remark-slide-content .vbottom-30 h3, .remark-slide-content .vbottom-30 h4, .remark-slide-content .vbottom-30 h5, .remark-slide-content .vbottom-30 h6 {margin-top: 0;}
.remark-slide-content .vbottom-35 h1, .remark-slide-content .vbottom-35 h2, .remark-slide-content .vbottom-35 h3, .remark-slide-content .vbottom-35 h4, .remark-slide-content .vbottom-35 h5, .remark-slide-content .vbottom-35 h6 {margin-top: 0;}
.remark-slide-content .vbottom-40 h1, .remark-slide-content .vbottom-40 h2, .remark-slide-content .vbottom-40 h3, .remark-slide-content .vbottom-40 h4, .remark-slide-content .vbottom-40 h5, .remark-slide-content .vbottom-40 h6 {margin-top: 0;}
.remark-slide-content .vbottom-45 h1, .remark-slide-content .vbottom-45 h2, .remark-slide-content .vbottom-45 h3, .remark-slide-content .vbottom-45 h4, .remark-slide-content .vbottom-45 h5, .remark-slide-content .vbottom-45 h6 {margin-top: 0;}
.remark-slide-content .vtop-0 h1, .remark-slide-content .vtop-0 h2, .remark-slide-content .vtop-0 h3, .remark-slide-content .vtop-0 h4, .remark-slide-content .vtop-0 h5, .remark-slide-content .vtop-0 h6 {margin-top: 0;}
.remark-slide-content .vtop-5 h1, .remark-slide-content .vtop-5 h2, .remark-slide-content .vtop-5 h3, .remark-slide-content .vtop-5 h4, .remark-slide-content .vtop-5 h5, .remark-slide-content .vtop-5 h6 {margin-top: 0;}
/* ... */

